--- a/index.html
+++ b/index.html
@@ -219,6 +219,9 @@
         @media screen and (min-width:992px) {
             #rsvp {
                 background-image: url('static/112-desk.jpeg') !important;
+                background-attachment: fixed !important;
+                background-position: center center !important;
+                background-size: cover !important;
             }
         }
 
@@ -307,6 +310,9 @@
 
             #home {
                 background-image: url('static/117.jpeg') !important;
+                background-position: center center !important;
+                background-size: cover !important;
+                background-attachment: fixed !important;
             }
 
             #c1,
@@ -390,7 +396,7 @@
         <div id="oliven-main">
             <div style="background-color: #161616;">
                 <header id="home" class="header valign bg-img parallaxie"
-                    style="background-image: url(static/117-desk.jpeg); opacity: 0.8;  background-position: 80% 100%;">
+                    style="background-image: url(static/117-desk.jpeg); opacity: 0.8; background-position: center center; background-size: cover; background-attachment: fixed;">
                     <div class="overlay" style="background-color: #76704b15;"></div>
                     <div class="container">
                         <div class="row">
