--- a/index.html
+++ b/index.html
@@ -1076,7 +1076,7 @@
                                     }
                                     
                                     // Send email using FormSubmit.co
-                                    fetch('https://formsubmit.co/ajax/lucian_munteanu01@yahoo.com', {
+                                    fetch('https://formsubmit.co/ajax/tl.razvan@yahoo.com', {
                                         method: 'POST',
                                         headers: {
                                             'Content-Type': 'application/json',
