--- a/index.html
+++ b/index.html
@@ -1453,7 +1453,7 @@
                                     #vi-confirmation-form .sd-boolean-root {
                                         display: flex !important;
                                         justify-content: center !important;
-                                        gap: 12px !important;
+                                        gap: 10px !important;
                                     }
 
                                     #vi-confirmation-form .sd-boolean__item {
@@ -1461,11 +1461,12 @@
                                         align-items: center !important;
                                         justify-content: center !important;
                                         gap: 8px !important;
-                                        padding: 10px 18px !important;
-                                        border: 2px solid #bd945a !important;
-                                        border-radius: 28px !important;
-                                        background: #fff !important;
-                                        min-width: 120px !important;
+                                        padding: 10px 20px !important;
+                                        border: 2px solid #d8d8d8 !important;
+                                        border-radius: 26px !important;
+                                        background: #f7f7f7 !important;
+                                        min-width: 130px !important;
+                                        min-height: 44px !important;
                                         box-sizing: border-box !important;
                                     }
 
@@ -1480,17 +1481,18 @@
                                         margin: 0 !important;
                                         font-weight: 600 !important;
                                         color: #222 !important;
+                                        white-space: nowrap !important;
                                     }
 
                                     /* active state */
                                     #vi-confirmation-form .sd-item--checked .sd-boolean__item {
-                                        border-color: #0b7bff !important;
-                                        box-shadow: 0 0 0 2px #0b7bff inset !important;
-                                        color: #0b7bff !important;
+                                        border-color: #bd945a !important;
+                                        background: #fff !important;
+                                        color: #bd945a !important;
                                     }
 
                                     #vi-confirmation-form .sd-item--checked .sd-boolean__label {
-                                        color: #0b7bff !important;
+                                        color: #bd945a !important;
                                     }
                                 }
 
